new updates 11/17